# uplaybook

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: build_docs.yml  main.yml  release.yml
.uplaybooks/new-uplaybook/: playbook  playbook.j2
completions/: README  up.bash  up.fish
docs/: README  for_ansible_users.md  getting_started.md  hacking.md  include.md  index.md  installing.md  installing_playbooks.md  requirements.txt  running.md  templating.md  tutorial.md  uplaybook_library.md
docs/playbooks/: basics.md  what_is.md
docs/source/: conf.py  core.rst  fs.md  fs.rst  index.rst  tasks.md
docs/tasks/: core.md  fs.md  index.md  internals.md
examples/apt-thirdparty-install/: playbook
examples/install-apache-module/: playbook
examples/new-uplaybook/: playbook  playbook.j2
tests/: runtests
tests/test_basics/: args.pb  basics.pb  include.pb  loader.pb  notify.pb  run_test  samplefile  sub1.pb  sub2.pb  testfile.j2
tests/test_copy/: recursive.pb  run_test
tests/test_fs/: builder.pb  fs.pb  run_test
tests/test_pyinfra/: pyinfra.pb  run_test
uplaybook/: __init__.py  cli.py  core.py  fernetreader.py  fs.py  internals.py  pyinfra.py
uplaybook/pyinfra/: __init__.py  apk.py  apt.py  brew.py  bsdinit.py  choco.py  dnf.py  files.py  gem.py  git.py  iptables.py  launchd.py  lxd.py  mysql.py  npm.py  openrc.py  pacman.py  pip.py  pkg.py  pkgin.py  postgresql.py  puppet.py  pyinfra_stubs  server.py  ssh.py  systemd.py  sysvinit.py  upstart.py  vzctl.py  (+5 more)
uplaybook2/: __init__.py  core.py  fs.py  internals.py
(+36 files in other folders)
