[tool.poetry]
name = "uplaybook"
version = "0.1.0"
description = "A python-syntax declarative IT automation tool."
authors = ["Sean Reifschneider <jafo00@gmail.com>"]
license = "Creative Commons Zero v1.0 Universal"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"
symbolicmode = "^2.0.0"
rich = "*"
pyinfra = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
up = "uplaybook.cli:cli"
